# tsql

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
cli/: Cargo.toml  build.rs
cli/src/: helper.rs  main.rs
examples/: demo.tsql  simple.tsql  types.tsql
lib/: .gitignore  Cargo.toml
lib/benches/: parsing_tables.rs
lib/src/: generate.rs  helper.rs  lib.rs  types.rs
lib/src/parser/: mod.rs  parser.rs  types.rs
lib/tests/: e2e.rs
lib/tests/files/: .gitignore  Bump anyhow from 1.0.72 to 1.0.md  generate_big.py  pk.tsql
src/: lib.rs  main.rs  parse.rs  types.rs
src/parser/: helper.rs  mod.rs  parser.rs  types.rs
tests/: e2e.rs  parse_examples.rs
tests/files/: fk.tsql  generate_big.py  pk.tsql  types.tsql
