[package]
name = "tsql_cli"
version = "0.1.0"
edition = "2021"

license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "generate_tsql"
path = "./bin/generate_tsql.rs"

[dependencies]
tsql = { version = "0.1.0", path = "../lib", features = ["generate"] }
pico-args = "0.5.0"
