[package]
name = "tsql"
version = "0.1.0"
edition = "2021"

license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
nom = "7.1.3"
static_assertions = "1.1.0"
hmac-sha256 = { version = "1.1.7", optional = true }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[features]
default = []
generate = ["dep:hmac-sha256"]

[[bench]]
name = "parsing_tables"
harness = false
